--- a/style.css
+++ b/style.css
@@ -1,1 +1,21 @@
+main>section {
+background-color: rgb(236, 202, 227);
+}
+
+main>section>h2{
+    text-align: center;
+    padding: 5px;
+
+}
+  table {
+    border-collapse: collapse;
+    width: 400px;
+    text-align: center;
+}
+td,th {
+    border: 2px solid black;
+    padding: 10px;
+    
+}
+
 
