--- a/table.css
+++ b/table.css
@@ -1,1 +1,11 @@
- 
+  table {
+    border-collapse: collapse;
+    width: 400px;
+    text-align: center;
+}
+td,th {
+    border: 2px solid black;
+    padding: 10px;
+    
+}
+
