update all the code .....

--- a/table.css
+++ b/table.css
@@ -1,11 +1,36 @@
-  table {
-    border-collapse: collapse;
-    width: 400px;
-    text-align: center;
+  table{
+  width: 60%;
+  margin: 30px auto;
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
+  text-align: center;
 }
-td,th {
-    border: 2px solid black;
-    padding: 10px;
-    
+
+
+
+
+th, td{
+  border: 1px solid #666;
+  padding: 10px;
 }
+
+th{
+  background-color: #333;
+  color: white;
+}
+
+tbody tr:nth-child(even){
+  background-color: #f2f2f2;
+}
+
+tbody tr:hover{
+  background-color: #d8e6ff;
+  transition: 0.3s;
+}
+
+tfoot{
+  background-color: #ddd;
+  font-weight: bold;
+}
+
 
