--- a/style.css
+++ b/style.css
@@ -1,11 +1,30 @@
-main>section {
-background-color: rgb(236, 202, 227);
+section{
+  max-width: 800px;
+  margin: 30px auto;
+  padding: 20px;
+  background-color: #f7f7f7;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  font-family: Arial, sans-serif;
 }
 
-main>section>h2{
-    text-align: center;
-    padding: 5px;
-
+h2{
+  margin-bottom: 10px;
+  text-align: center;
+  color: #333;
 }
-  
 
+p{
+  line-height: 1.6;
+  color: #555;
+  margin-bottom: 15px;
+  text-align: justify;
+}
+
+ 
+#myPhoto {
+    width: 150px;
+    height: 200px; 
+    border-radius: 10px;
+    margin-top: 40px;
+}
